Re-prepare all data files

--- a/backend/tsosi/data/preparation/doab/data_2024.ipynb
+++ b/backend/tsosi/data/preparation/doab/data_2024.ipynb
@@ -607,13 +607,13 @@
     "config.generate_data_file()\n",
     "\n",
     "# Sponsors\n",
-    "# file_path = (\n",
-    "#     Path.home()\n",
-    "#     / \"Nextcloud/TSOSI_data/doab/4_prepared/2025-02-11-DOAB_Sponsorship_Report_prepared.xlsx\"\n",
-    "# )\n",
-    "# sheet_name = \"Transferts\"\n",
-    "# config = config_sponsors(str(file_path), sheet_name, date_data)\n",
-    "# config.generate_data_file()"
+    "file_path = (\n",
+    "    Path.home()\n",
+    "    / \"Nextcloud/TSOSI_data/doab/4_prepared/2025-02-11-DOAB_Sponsorship_Report_prepared.xlsx\"\n",
+    ")\n",
+    "sheet_name = \"Transferts\"\n",
+    "config = config_sponsors(str(file_path), sheet_name, date_data)\n",
+    "config.generate_data_file()"
    ]
   },
   {
