--- a/backend/tsosi/data/preparation/doaj/playground.ipynb
+++ b/backend/tsosi/data/preparation/doaj/playground.ipynb
@@ -4,6 +4,142 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 5 - Generate TSOSI data file\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "import sys\n",
+    "import os\n",
+    "import django\n",
+    "from datetime import date\n",
+    "\n",
+    "# Add the parent directory to the system path and setup django\n",
+    "BASE_DIR = str(Path(os.getcwd()).resolve().parent.parent.parent.parent)\n",
+    "\n",
+    "if BASE_DIR not in sys.path:\n",
+    "    sys.path.append(BASE_DIR)\n",
+    "\n",
+    "os.environ.setdefault(\"DJANGO_SETTINGS_MODULE\", \"backend_site.settings\")\n",
+    "\n",
+    "django.setup()\n",
+    "\n",
+    "from tsosi.data.preparation.doaj.libraries_2021_2022 import (\n",
+    "    get_config as config_libraries_2021_2022,\n",
+    ")\n",
+    "from tsosi.data.preparation.doaj.libraries_2023 import (\n",
+    "    get_config as config_libraries_2023,\n",
+    ")\n",
+    "from tsosi.data.preparation.doaj.libraries_2024_now import (\n",
+    "    get_config as config_libraries_2024_now,\n",
+    ")\n",
+    "from tsosi.data.preparation.doaj.publishers_202X import (\n",
+    "    get_config as config_publishers,\n",
+    ")\n",
+    "\n",
+    "prepared_folder = \"Nextcloud/TSOSI_data/doaj/4_prepared\"\n",
+    "## Libraries\n",
+    "# Libraries 2021 & 2022\n",
+    "date_data_2021_2022_2023 = date(2024, 9, 20)\n",
+    "file_path = (\n",
+    "    Path.home()\n",
+    "    / prepared_folder\n",
+    "    / \"2024-09-20-DOAJ_Library_Report_2021_prepared.xlsx\"\n",
+    ")\n",
+    "config = config_libraries_2021_2022(\n",
+    "    2021, str(file_path), \"Transferts\", date_data_2021_2022_2023\n",
+    ")\n",
+    "config.generate_data_file()\n",
+    "\n",
+    "file_path = (\n",
+    "    Path.home()\n",
+    "    / prepared_folder\n",
+    "    / \"2024-09-20-DOAJ_Library_Report_2022_prepared.xlsx\"\n",
+    ")\n",
+    "config = config_libraries_2021_2022(\n",
+    "    2021, str(file_path), \"Transferts\", date_data_2021_2022_2023\n",
+    ")\n",
+    "config.generate_data_file()\n",
+    "\n",
+    "# Libraries 2023\n",
+    "file_path = (\n",
+    "    Path.home()\n",
+    "    / prepared_folder\n",
+    "    / \"2024-09-20-DOAJ_Library_Report_2023_prepared.xlsx\"\n",
+    ")\n",
+    "config = config_libraries_2023(\n",
+    "    str(file_path), \"Transferts\", date_data_2021_2022_2023\n",
+    ")\n",
+    "config.generate_data_file()\n",
+    "\n",
+    "# Libraries 2024\n",
+    "date_data_2024 = date(2025, 1, 15)\n",
+    "file_path = (\n",
+    "    Path.home()\n",
+    "    / prepared_folder\n",
+    "    / \"2025-01-15-DOAJ_Library_Report_2024_prepared.xlsx\"\n",
+    ")\n",
+    "config = config_libraries_2024_now(\n",
+    "    2024, str(file_path), \"Transferts\", date_data_2024\n",
+    ")\n",
+    "config.generate_data_file()\n",
+    "\n",
+    "## Publishers\n",
+    "# Publishers 2021\n",
+    "date_data_sponsors = date(2025, 1, 7)\n",
+    "file_path = (\n",
+    "    Path.home()\n",
+    "    / prepared_folder\n",
+    "    / \"2025-01-07-DOAJ_Publisher_Report_2021_prepared.xlsx\"\n",
+    ")\n",
+    "config = config_publishers(\n",
+    "    2021, str(file_path), \"Transferts\", date_data_sponsors\n",
+    ")\n",
+    "config.generate_data_file()\n",
+    "\n",
+    "# Publishers 2022\n",
+    "file_path = (\n",
+    "    Path.home()\n",
+    "    / prepared_folder\n",
+    "    / \"2025-01-07-DOAJ_Publisher_Report_2022_prepared.xlsx\"\n",
+    ")\n",
+    "config = config_publishers(\n",
+    "    2022, str(file_path), \"Transferts\", date_data_sponsors\n",
+    ")\n",
+    "config.generate_data_file()\n",
+    "\n",
+    "# Publishers 2023\n",
+    "file_path = (\n",
+    "    Path.home()\n",
+    "    / prepared_folder\n",
+    "    / \"2025-01-07-DOAJ_Publisher_Report_2023_prepared.xlsx\"\n",
+    ")\n",
+    "config = config_publishers(\n",
+    "    2023, str(file_path), \"Transferts\", date_data_sponsors\n",
+    ")\n",
+    "config.generate_data_file()\n",
+    "\n",
+    "# Publishers 2024\n",
+    "file_path = (\n",
+    "    Path.home()\n",
+    "    / prepared_folder\n",
+    "    / \"2025-01-07-DOAJ_Publisher_Report_2024_prepared.xlsx\"\n",
+    ")\n",
+    "config = config_publishers(\n",
+    "    2024, str(file_path), \"Transferts\", date_data_sponsors\n",
+    ")\n",
+    "config.generate_data_file()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Check for transferts with ambiguous invoice dates\n"
    ]
   },
@@ -54,69 +190,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Institution name</th>\n",
-       "      <th>type</th>\n",
-       "      <th>country</th>\n",
-       "      <th>currency</th>\n",
-       "      <th>amount</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>149</th>\n",
-       "      <td>Université de Bordeaux</td>\n",
-       "      <td>Library</td>\n",
-       "      <td>France</td>\n",
-       "      <td>€</td>\n",
-       "      <td>1317.72</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>150</th>\n",
-       "      <td>Université de Bordeaux</td>\n",
-       "      <td>Library</td>\n",
-       "      <td>France</td>\n",
-       "      <td>€</td>\n",
-       "      <td>1931.70</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           Institution name     type country currency   amount\n",
-       "149  Université de Bordeaux  Library  France        €  1317.72\n",
-       "150  Université de Bordeaux  Library  France        €  1931.70"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from pathlib import Path\n",
