Add info button to intermediary column

--- a/backend/tsosi/data/playground.ipynb
+++ b/backend/tsosi/data/playground.ipynb
@@ -64,18 +64,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/guillaume-alzieu/Dev/TSOSI/tsosi-app/backend/.venv/lib/python3.12/site-packages/django/db/models/fields/__init__.py:1606: RuntimeWarning: DateTimeField InfrastructureDetails.date_data_update received a naive datetime (2025-02-11 00:00:00) while time zone support is active.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "import sys\n",
@@ -94,97 +85,15 @@
     "\n",
     "django.setup()\n",
     "\n",
-    "from tsosi.data.db_utils import (\n",
-    "    date_extremas_from_queryset,\n",
-    "    DateExtremas,\n",
-    "    bulk_create_from_df,\n",
-    "    bulk_update_from_df,\n",
-    ")\n",
-    "from tsosi.models import Transfert, Entity, InfrastructureDetails\n",
-    "from django.db.models import Q, Count, Max\n",
+    "from tsosi.data.enrichment import entities_with_identifier_data\n",
     "\n",
     "\n",
     "@sync_to_async\n",
     "def run():\n",
-    "    # Min & max transfert dates per recipient\n",
-    "    dates = date_extremas_from_queryset(\n",
-    "        Transfert.objects.all(), [\"date_clc\"], groupby=[\"recipient_id\"]\n",
-    "    )\n",
-    "    dates: dict[str, DateExtremas] = {\n",
-    "        d[\"recipient_id\"]: d[\"_extremas\"] for d in dates\n",
-    "    }\n",
     "\n",
-    "    # Ratio of hidden amounts among all amounts per recipient\n",
-    "    hidden_transferts = Count(\n",
-    "        \"transfert_as_recipient\",\n",
-    "        filter=Q(transfert_as_recipient__hide_amount=True),\n",
-    "    )\n",
-    "    total_transferts = Count(\"transfert_as_recipient\")\n",
-    "    date_source_max = Max(\n",
-    "        \"transfert_as_recipient__data_load_source__date_data_obtained\"\n",
-    "    )\n",
+    "    df = entities_with_identifier_data()\n",
     "\n",
-    "    entities = (\n",
-    "        Entity.objects.filter(is_recipient=True)\n",
-    "        .annotate(hidden_transferts=hidden_transferts)\n",
-    "        .annotate(total_transferts=total_transferts)\n",
-    "        .annotate(date_last_update=date_source_max)\n",
-    "        .values(\n",
-    "            \"id\",\n",
-    "            \"hidden_transferts\",\n",
-    "            \"total_transferts\",\n",
-    "            \"date_last_update\",\n",
-    "            \"infrastructure_details\",\n",
-    "        )\n",
-    "    )\n",
-    "    data = pd.DataFrame.from_records(entities)\n",
-    "    if data.empty:\n",
-    "        return data, dates\n",
-    "\n",
-    "    data[\"hidden_ratio\"] = data[\"hidden_transferts\"] / data[\"total_transferts\"]\n",
-    "\n",
-    "    data[\"dates\"] = data[\"id\"].map(dates)\n",
-    "    data[\"date_data_start\"] = data[\"dates\"].apply(\n",
-    "        lambda x: x.min if not pd.isna(x) else x\n",
-    "    )\n",
-    "    data[\"date_data_end\"] = data[\"dates\"].apply(\n",
-    "        lambda x: x.max if not pd.isna(x) else x\n",
-    "    )\n",
-    "\n",
-    "    data[\"date_data_update\"] = data[\"date_last_update\"]\n",
-    "\n",
-    "    no_details_mask = data[\"infrastructure_details\"].isna()\n",
-    "    details_to_create = data[no_details_mask].copy()\n",
-    "    if not details_to_create.empty:\n",
-    "        details_to_create[\"entity_id\"] = details_to_create[\"id\"]\n",
-    "        bulk_create_from_df(\n",
-    "            InfrastructureDetails,\n",
-    "            details_to_create,\n",
-    "            [\n",
-    "                \"entity_id\",\n",
-    "                \"hidden_ratio\",\n",
-    "                \"data_data_start\",\n",
-    "                \"date_data_end\",\n",
-    "                \"date_data_update\",\n",
-    "            ],\n",
-    "        )\n",
-    "\n",
-    "    details_to_update = data[~no_details_mask].copy()\n",
-    "    if not details_to_update.empty:\n",
-    "        details_to_update[\"id\"] = details_to_update[\"infrastructure_details\"]\n",
-    "        bulk_update_from_df(\n",
-    "            InfrastructureDetails,\n",
-    "            details_to_update,\n",
-    "            [\n",
-    "                \"id\",\n",
-    "                \"hidden_ratio\",\n",
-    "                \"date_data_start\",\n",
-    "                \"date_data_end\",\n",
-    "                \"date_data_update\",\n",
-    "            ],\n",
-    "        )\n",
-    "\n",
-    "    return data, dates\n",
+    "    return df\n",
     "\n",
     "\n",
     "res = await run()"
@@ -192,136 +101,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>infrastructure_details</th>\n",
-       "      <th>hidden_transferts</th>\n",
-       "      <th>total_transferts</th>\n",
-       "      <th>date_last_update</th>\n",
-       "      <th>hidden_ratio</th>\n",
-       "      <th>dates</th>\n",
-       "      <th>date_data_start</th>\n",
-       "      <th>date_data_end</th>\n",
-       "      <th>date_data_update</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>b84cbff0-f2d0-46db-bc45-73caf5a1e33c</td>\n",
-       "      <td>2</td>\n",
-       "      <td>23</td>\n",
-       "      <td>23</td>\n",
-       "      <td>2025-02-11</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>DateExtremas(min=datetime.date(2021, 5, 11), m...</td>\n",
-       "      <td>2021-05-11</td>\n",
-       "      <td>2025-01-01</td>\n",
-       "      <td>2025-02-11</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                     id  infrastructure_details  \\\n",
-       "0  b84cbff0-f2d0-46db-bc45-73caf5a1e33c                       2   \n",
-       "\n",
-       "   hidden_transferts  total_transferts date_last_update  hidden_ratio  \\\n",
-       "0                 23                23       2025-02-11           1.0   \n",
-       "\n",
-       "                                               dates date_data_start  \\\n",
-       "0  DateExtremas(min=datetime.date(2021, 5, 11), m...      2021-05-11   \n",
-       "\n",
-       "  date_data_end date_data_update  \n",
-       "0    2025-01-01       2025-02-11  "
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data, dates = res\n",
-    "data"
+    "res[~res[\"ror_date_inception\"].isna()][\"wikidata_date_inception\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "file: /home/guillaume-alzieu/Documents/TSOSI/Graphisme/Mont/Mont/Fontfabric - Mont Bold Italic.otf\n",
-      "Save path: /home/guillaume-alzieu/Documents/TSOSI/Fonts/Mont/Mont_Bold_Italic.woff2\n",
-      "file: /home/guillaume-alzieu/Documents/TSOSI/Graphisme/Mont/Mont/Fontfabric - Mont Hairline Italic.otf\n",
-      "Save path: /home/guillaume-alzieu/Documents/TSOSI/Fonts/Mont/Mont_Hairline_Italic.woff2\n",
-      "file: /home/guillaume-alzieu/Documents/TSOSI/Graphisme/Mont/Mont/Fontfabric - Mont Regular Italic.otf\n",
-      "Save path: /home/guillaume-alzieu/Documents/TSOSI/Fonts/Mont/Mont_Regular_Italic.woff2\n",
-      "file: /home/guillaume-alzieu/Documents/TSOSI/Graphisme/Mont/Mont/Fontfabric - Mont Black.otf\n",
-      "Save path: /home/guillaume-alzieu/Documents/TSOSI/Fonts/Mont/Mont_Black.woff2\n",
-      "file: /home/guillaume-alzieu/Documents/TSOSI/Graphisme/Mont/Mont/Fontfabric - Mont Regular.otf\n",
-      "Save path: /home/guillaume-alzieu/Documents/TSOSI/Fonts/Mont/Mont_Regular.woff2\n",
-      "file: /home/guillaume-alzieu/Documents/TSOSI/Graphisme/Mont/Mont/Fontfabric - Mont Thin.otf\n",
-      "Save path: /home/guillaume-alzieu/Documents/TSOSI/Fonts/Mont/Mont_Thin.woff2\n",
-      "file: /home/guillaume-alzieu/Documents/TSOSI/Graphisme/Mont/Mont/Fontfabric - Mont SemiBold.otf\n",
-      "Save path: /home/guillaume-alzieu/Documents/TSOSI/Fonts/Mont/Mont_SemiBold.woff2\n",
-      "file: /home/guillaume-alzieu/Documents/TSOSI/Graphisme/Mont/Mont/Fontfabric - Mont Light Italic.otf\n",
-      "Save path: /home/guillaume-alzieu/Documents/TSOSI/Fonts/Mont/Mont_Light_Italic.woff2\n",
-      "file: /home/guillaume-alzieu/Documents/TSOSI/Graphisme/Mont/Mont/Fontfabric - Mont Black Italic.otf\n",
-      "Save path: /home/guillaume-alzieu/Documents/TSOSI/Fonts/Mont/Mont_Black_Italic.woff2\n",
-      "file: /home/guillaume-alzieu/Documents/TSOSI/Graphisme/Mont/Mont/Fontfabric - Mont Heavy Italic.otf\n",
-      "Save path: /home/guillaume-alzieu/Documents/TSOSI/Fonts/Mont/Mont_Heavy_Italic.woff2\n",
-      "file: /home/guillaume-alzieu/Documents/TSOSI/Graphisme/Mont/Mont/Fontfabric - Mont Thin Italic.otf\n",
-      "Save path: /home/guillaume-alzieu/Documents/TSOSI/Fonts/Mont/Mont_Thin_Italic.woff2\n",
-      "file: /home/guillaume-alzieu/Documents/TSOSI/Graphisme/Mont/Mont/Fontfabric - Mont Bold.otf\n",
-      "Save path: /home/guillaume-alzieu/Documents/TSOSI/Fonts/Mont/Mont_Bold.woff2\n",
-      "file: /home/guillaume-alzieu/Documents/TSOSI/Graphisme/Mont/Mont/Fontfabric - Mont SemiBold Italic.otf\n",
-      "Save path: /home/guillaume-alzieu/Documents/TSOSI/Fonts/Mont/Mont_SemiBold_Italic.woff2\n",
-      "file: /home/guillaume-alzieu/Documents/TSOSI/Graphisme/Mont/Mont/Fontfabric - Mont Hairline.otf\n",
-      "Save path: /home/guillaume-alzieu/Documents/TSOSI/Fonts/Mont/Mont_Hairline.woff2\n",
-      "file: /home/guillaume-alzieu/Documents/TSOSI/Graphisme/Mont/Mont/Fontfabric - Mont Heavy.otf\n",
-      "Save path: /home/guillaume-alzieu/Documents/TSOSI/Fonts/Mont/Mont_Heavy.woff2\n",
-      "file: /home/guillaume-alzieu/Documents/TSOSI/Graphisme/Mont/Mont/Fontfabric - Mont ExtraLight.otf\n",
-      "Save path: /home/guillaume-alzieu/Documents/TSOSI/Fonts/Mont/Mont_ExtraLight.woff2\n",
-      "file: /home/guillaume-alzieu/Documents/TSOSI/Graphisme/Mont/Mont/Fontfabric - Mont Book Italic.otf\n",
-      "Save path: /home/guillaume-alzieu/Documents/TSOSI/Fonts/Mont/Mont_Book_Italic.woff2\n",
-      "file: /home/guillaume-alzieu/Documents/TSOSI/Graphisme/Mont/Mont/Fontfabric - Mont ExtraLight Italic.otf\n",
-      "Save path: /home/guillaume-alzieu/Documents/TSOSI/Fonts/Mont/Mont_ExtraLight_Italic.woff2\n",
-      "file: /home/guillaume-alzieu/Documents/TSOSI/Graphisme/Mont/Mont/Fontfabric - Mont Book.otf\n",
-      "Save path: /home/guillaume-alzieu/Documents/TSOSI/Fonts/Mont/Mont_Book.woff2\n",
-      "file: /home/guillaume-alzieu/Documents/TSOSI/Graphisme/Mont/Mont/Fontfabric - Mont Light.otf\n",
-      "Save path: /home/guillaume-alzieu/Documents/TSOSI/Fonts/Mont/Mont_Light.woff2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from fontTools.ttLib.woff2 import compress\n",
     "from pathlib import Path\n",
