Lots of ugly style updates - To be followed

--- a/backend/tsosi/data/playground.ipynb
+++ b/backend/tsosi/data/playground.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,13 +85,16 @@
     "\n",
     "django.setup()\n",
     "\n",
-    "from tsosi.data.enrichment import entities_with_identifier_data\n",
+    "from tsosi.models import Entity\n",
     "\n",
     "\n",
     "@sync_to_async\n",
     "def run():\n",
     "\n",
-    "    df = entities_with_identifier_data()\n",
+    "    data = Entity.objects.filter(\n",
+    "        country__isnull=False, is_recipient=False\n",
+    "    ).values(\"id\", \"country\")\n",
+    "    df = pd.DataFrame.from_records(data)\n",
     "\n",
     "    return df\n",
     "\n",
@@ -105,7 +108,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res[~res[\"ror_date_inception\"].isna()][\"wikidata_date_inception\"]"
+    "from pycountry import countries\n",
+    "\n",
+    "d = (\n",
+    "    res.groupby(\"country\")\n",
+    "    .count()\n",
+    "    .reset_index()\n",
+    "    .sort_values(\"id\", ascending=False)\n",
+    ")\n",
+    "mapping = {c.alpha_2: c.name for c in countries}\n",
+    "d[\"country_name\"] = d[\"country\"].map(mapping)\n",
+    "d.rename(columns={\"country\": \"country_code\", \"id\": \"number\"}, inplace=True)\n",
+    "\n",
+    "\n",
+    "categories = [(50, \"Upper\"), (10, \"Medium\"), (0, \"Lower\")]\n",
+    "\n",
+    "for c_threshold, c_name in sorted(categories, key=lambda x: x[0]):\n",
+    "    mask = d[\"number\"] > c_threshold\n",
+    "    d.loc[mask, \"category\"] = c_name\n",
+    "\n",
+    "d[[\"country_name\", \"country_code\", \"number\", \"category\"]].to_excel(\n",
+    "    \"supporters_extract.xlsx\", index=False\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, 'Lower'), (10, 'Medium'), (50, 'Upper')]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted(categories, key=lambda x: x[0])"
    ]
   },
   {
