--- a/backend/tsosi/data/preparation/pci/run.ipynb
+++ b/backend/tsosi/data/preparation/pci/run.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,9 +155,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO raw_data_config - Preparing data with config `pci`.\n",
+      "INFO raw_data_config - Successfully prepared the data for config pci\n",
+      "INFO raw_data_config - Successfully write TSOSI data file at /home/guillaume-alzieu/Nextcloud/TSOSI_data/_exports/2025-03-06_pci_full.json\n"
+     ]
+    }
+   ],
    "source": [
     "from pathlib import Path\n",
     "import sys\n",
