--- a/backend/tsosi/data/preparation/scipost/run.ipynb
+++ b/backend/tsosi/data/preparation/scipost/run.ipynb
@@ -13,7 +13,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from get_data import get_scipost_raw_data, enrich_scipost_raw_data\n",
+    "from pathlib import Path\n",
+    "import sys\n",
+    "import os\n",
+    "import django\n",
+    "from datetime import date\n",
+    "\n",
+    "# Add the parent directory to the system path and setup django\n",
+    "BASE_DIR = str(Path(os.getcwd()).resolve().parent.parent.parent.parent)\n",
+    "\n",
+    "if BASE_DIR not in sys.path:\n",
+    "    sys.path.append(BASE_DIR)\n",
+    "\n",
+    "os.environ.setdefault(\"DJANGO_SETTINGS_MODULE\", \"backend_site.settings\")\n",
+    "\n",
+    "django.setup()\n",
+    "\n",
+    "from get_data import get_scipost_raw_data\n",
     "from datetime import date\n",
     "from pathlib import Path\n",
     "\n",
@@ -55,34 +71,6 @@
     "df = pd.read_json(raw_path, orient=\"records\")\n",
     "data = pre_process_data(df)\n",
     "data.to_json(processed_path, orient=\"records\", indent=2, index=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 3 - Enrich data with ROR ID\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pathlib import Path\n",
-    "from get_data import enrich_scipost_raw_data\n",
-    "\n",
-    "date_str = \"2025-03-05\"\n",
-    "input_data_file = f\"{date_str}_scipost_pre_processed.json\"\n",
-    "enriched_data_file = f\"{date_str}_scipost_enriched.json\"\n",
-    "\n",
-    "input_data_folder = Path.home() / \"Nextcloud/TSOSI_data/scipost/1_pre_processed\"\n",
-    "enriched_data_folder = Path.home() / \"Nextcloud/TSOSI_data/scipost/3_enriched\"\n",
-    "\n",
-    "input_path = str(input_data_folder / input_data_file)\n",
-    "enriched_path = str(enriched_data_folder / enriched_data_file)\n",
-    "enrich_scipost_raw_data(input_path, enriched_path)"
    ]
   },
   {
