Add operas config - Modify home page slightly

--- a/backend/tsosi/data/playground.ipynb
+++ b/backend/tsosi/data/playground.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,12 +85,15 @@
     "\n",
     "django.setup()\n",
     "\n",
-    "from tsosi.models import Entity\n",
+    "from tsosi.models import Entity, Transfert\n",
     "\n",
     "\n",
     "@sync_to_async\n",
     "def run():\n",
     "\n",
+    "    # data = Transfert.objects.filter(emitter__country__isnull=False).values(\n",
+    "    #     \"emitter__id\", \"emitter__country\"\n",
+    "    # )\n",
     "    data = Entity.objects.filter(\n",
     "        country__isnull=False, is_recipient=False\n",
     "    ).values(\"id\", \"country\")\n",
@@ -100,6 +103,123 @@
     "\n",
     "\n",
     "res = await run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>emitter__id</th>\n",
+       "      <th>emitter__country</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>000c71e1-ec1e-475d-97c2-7791e0a4f70c</td>\n",
+       "      <td>FR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>000c71e1-ec1e-475d-97c2-7791e0a4f70c</td>\n",
+       "      <td>FR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>000c71e1-ec1e-475d-97c2-7791e0a4f70c</td>\n",
+       "      <td>FR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>000c71e1-ec1e-475d-97c2-7791e0a4f70c</td>\n",
+       "      <td>FR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>000c71e1-ec1e-475d-97c2-7791e0a4f70c</td>\n",
+       "      <td>FR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2713</th>\n",
+       "      <td>ffae2bf9-de2d-44eb-858b-21557e527540</td>\n",
+       "      <td>CH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2714</th>\n",
+       "      <td>ffae2bf9-de2d-44eb-858b-21557e527540</td>\n",
+       "      <td>CH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2715</th>\n",
+       "      <td>ffae2bf9-de2d-44eb-858b-21557e527540</td>\n",
+       "      <td>CH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2716</th>\n",
+       "      <td>ffae2bf9-de2d-44eb-858b-21557e527540</td>\n",
+       "      <td>CH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2717</th>\n",
+       "      <td>fffc047e-ca1c-42b5-9c2c-a900531924d7</td>\n",
+       "      <td>FR</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2718 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               emitter__id emitter__country\n",
+       "0     000c71e1-ec1e-475d-97c2-7791e0a4f70c               FR\n",
+       "1     000c71e1-ec1e-475d-97c2-7791e0a4f70c               FR\n",
+       "2     000c71e1-ec1e-475d-97c2-7791e0a4f70c               FR\n",
+       "3     000c71e1-ec1e-475d-97c2-7791e0a4f70c               FR\n",
+       "4     000c71e1-ec1e-475d-97c2-7791e0a4f70c               FR\n",
+       "...                                    ...              ...\n",
+       "2713  ffae2bf9-de2d-44eb-858b-21557e527540               CH\n",
+       "2714  ffae2bf9-de2d-44eb-858b-21557e527540               CH\n",
+       "2715  ffae2bf9-de2d-44eb-858b-21557e527540               CH\n",
+       "2716  ffae2bf9-de2d-44eb-858b-21557e527540               CH\n",
+       "2717  fffc047e-ca1c-42b5-9c2c-a900531924d7               FR\n",
+       "\n",
+       "[2718 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res"
    ]
   },
   {
@@ -124,7 +244,7 @@
     "categories = [(50, \"Upper\"), (10, \"Medium\"), (0, \"Lower\")]\n",
     "\n",
     "for c_threshold, c_name in sorted(categories, key=lambda x: x[0]):\n",
-    "    mask = d[\"number\"] > c_threshold\n",
+    "    mask = d[\"number\"] >= c_threshold\n",
     "    d.loc[mask, \"category\"] = c_name\n",
     "\n",
     "d[[\"country_name\", \"country_code\", \"number\", \"category\"]].to_excel(\n",
@@ -134,20 +254,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(0, 'Lower'), (10, 'Medium'), (50, 'Upper')]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sorted(categories, key=lambda x: x[0])"
    ]
